crates/reinhardt-query/tests/compile_fail/set_nx_xx_conflict.rs
fn main() {
    use reinhardt_query::nosql::redis::string::StringCommand;
    let _ = StringCommand::set("k", "v").nx().xx();
}
